<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_fire"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_edit"
        android:title="@string/create" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_dashboard_black"
        android:title="@string/my_scrypts" />

</menu>
